// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ComponentWithTooltip Should render ComponentWithTooltip showed by click 1`] = `
<div
  class="ComponentWithTooltip"
>
  <div
    class="ComponentWithTooltip-Link"
  >
    <span
      class="control link link_theme_ghost"
      data-lego="react"
      role="button"
      tabindex="0"
    >
      <p>
        Кликни
      </p>
    </span>
  </div>
</div>
`;

exports[`Should render ComponentWithTooltip Should render ComponentWithTooltip showed by hovered 1`] = `
<div
  class="ComponentWithTooltip"
>
  <div
    class="ComponentWithTooltip-Link"
  >
    <span
      class="control link link_theme_ghost"
      data-lego="react"
      role="button"
      tabindex="0"
    >
      <p>
        Наведи
      </p>
    </span>
  </div>
</div>
`;
